# irsol-camera

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  annotated.html  annotated_dup.js  classes.html  dir_0358b2abfbc378317c03739eb2a29d37.html  dir_0358b2abfbc378317c03739eb2a29d37.js  dir_084e0a43971cfbbf39da636cc1b58a3e.html  dir_084e0a43971cfbbf39da636cc1b58a3e.js  dir_0b3df179161542c25407fcd486e98c37.html  dir_0fe15b0aa98a599d0f755b454a97d159.html  dir_0fe15b0aa98a599d0f755b454a97d159.js  dir_13aa60c7fe7d6005805159486cf225bf.html  dir_13aa60c7fe7d6005805159486cf225bf.js  dir_13f068ba2a9ca6794595d2dec4cbf5a5.html  dir_13f068ba2a9ca6794595d2dec4cbf5a5.js  dir_21648daa89eb305d0d5e4af84aa34621.html  dir_21648daa89eb305d0d5e4af84aa34621.js  dir_278e84952ed5c70b245e66db4db19878.html  dir_3207528bbd779d97b0d426464f9e3fce.html  dir_3207528bbd779d97b0d426464f9e3fce.js  dir_3ea47fb5fbc11f1cda5dea769242b2f3.html  dir_3ea47fb5fbc11f1cda5dea769242b2f3.js  dir_3f8d081db040d39990ca00efec8c60cc.html  dir_3f8d081db040d39990ca00efec8c60cc.js  dir_400f270ad93cf514bb5f84581eeb367a.html  dir_400f270ad93cf514bb5f84581eeb367a.js  dir_48965e6a359aebba5a1ec7944196708c.html  dir_48965e6a359aebba5a1ec7944196708c.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_49e56c817e5e54854c35e136979f97ca.js  dir_54273a8480d254c9c09e1b4d64497bcf.html  dir_54273a8480d254c9c09e1b4d64497bcf.js  dir_56634fa6c12db8f95172fd8b6835464d.html  dir_56634fa6c12db8f95172fd8b6835464d.js  dir_623aeda335ae5378c1aced4f268bf972.html  dir_623aeda335ae5378c1aced4f268bf972.js  (+139 more)
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  image_data.md  mainpage.md  quick_start.md  resources.md  server_architecture.md
docs/development-environmnet-configuration/: README.md
docs/physical-setup/: README.md
docs/resources/: camera_parameters.md  factory_camera_features.md
docs/setup/: README.md
docs/setup/resources/: Physical-setup.drawio
examples/: CMakeLists.txt
examples/edgedetect_cuda/: CMakeLists.txt  edgedetect_cuda.cpp
examples/edgedetect_opencl/: CMakeLists.txt  edgedetect_opencl.cpp
examples/getting_started/: CMakeLists.txt  getting_started.cpp
examples/opencv/: CMakeLists.txt  opencv.cpp
examples/opencv_cap/: CMakeLists.txt  opencv_cap.cpp
examples/user_buffer/: CMakeLists.txt  user_buffer.cpp
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  README.md
src/examples/00-logging-and-asserting/: CMakeLists.txt  README.md  main.cpp
src/examples/01-loading-images/: CMakeLists.txt  README.md  main-opencv.cpp  main.cpp
src/examples/02-interacting-with-camera-features/: CMakeLists.txt  README.md  main.cpp
src/examples/03-message-protocols/: CMakeLists.txt  README.md  main.cpp
src/examples/04-message-handlers/: CMakeLists.txt  README.md  main.cpp
src/examples/05-client-server-interaction/: CMakeLists.txt  README.md  main.cpp
src/examples/06-client-server-interaction-image-commands/: CMakeLists.txt  README.md  server.cpp  viewer_client_gi.cpp  viewer_client_gis.cpp
src/examples/camera_socket/: CMakeLists.txt  camera_server.cpp  viewer_client.cpp  viewer_client_gi.cpp  viewer_client_gis.cpp  viewer_client_poll.cpp
src/examples/edgedetect_cuda/: CMakeLists.txt
src/examples/edgedetect_opencl/: CMakeLists.txt
src/examples/getting_started/: CMakeLists.txt  getting_started.cpp
src/examples/opencv/: CMakeLists.txt  opencv.cpp
src/examples/opencv_cap/: CMakeLists.txt  opencv_cap.cpp
src/examples/server/: CMakeLists.txt  server.cpp
src/examples/simple/: CMakeLists.txt  simple.cpp
src/examples/simple_opencv/: CMakeLists.txt  simple_opencv.cpp
src/examples/simple_socket/: CMakeLists.txt
src/examples/socket/: CMakeLists.txt  socket_client.cpp  socket_server.cpp
src/examples/user_buffer/: CMakeLists.txt  user_buffer.cpp
src/irsol/: CMakeLists.txt
src/irsol/cmake/: BuildArgs.cmake  BuildNeoAPI.cmake  BuildPpkAssert.cmake  BuildSockpp.cmake  BuildSpdlog.cmake  BuildTabulate.cmake  FetchDependencies.cmake
src/irsol/include/irsol/: args.hpp  assert.hpp  camera.hpp  discovery.hpp  irsol.hpp  logging.hpp  macros.hpp  monitor.hpp  opencv.hpp  protocol.hpp  queue.hpp  server.hpp  traits.hpp  types.hpp  utils.hpp
src/irsol/include/irsol/camera/: discovery.hpp  interface.hpp  interface.tpp  monitor.hpp  pixel_format.hpp
src/irsol/include/irsol/protocol/: binary_header.hpp  binary_message.hpp  message.hpp  parser.hpp  parsing.hpp  serialization.hpp  serializer.hpp  types.hpp  utils.hpp
src/irsol/include/irsol/protocol/message/: assignment.hpp  binary.hpp  command.hpp  error.hpp  in_messages.hpp  inquiry.hpp  out_messages.hpp  success.hpp  (+3 more)
src/irsol/include/irsol/server/: acceptor.hpp  app.hpp  camera_controller.hpp  client.hpp  client_session.hpp  collector.hpp  command_handler.hpp  command_processor.hpp  handlers.hpp  image_collector.hpp  image_data.hpp  message_handler.hpp  message_handler2.hpp  server.hpp  types.hpp
src/irsol/lib/irsol/: assert.cpp  discovery.cpp  logging.cpp  monitor.cpp  opencv.cpp  utils.cpp
src/irsol/lib/irsol/camera/: discovery.cpp  interface.cpp  monitor.cpp
src/irsol/lib/irsol/protocol/: binary_header.cpp  binary_message.cpp  message.cpp  parser.cpp  serializer.cpp
src/irsol/lib/irsol/server/: acceptor.cpp  app.cpp  camera_controller.cpp  client_session.cpp  collector.cpp  command_handler.cpp  command_processor.cpp  image_data.cpp  message_handler.cpp  message_handler2.cpp  server.cpp
src/tests/: CMakeLists.txt  README.md
src/tests/unit/: CMakeLists.txt  main.cpp  test_protocol_message.cpp  test_protocol_serializer.cpp  test_protocol_utils.cpp  test_queue.cpp  test_utils.cpp
src/tests/unit/camera/: test_pixel_format.cpp
src/tests/unit/cmake/: BuildCatch2.cmake  FetchDependencies.cmake
src/tests/unit/protocol/: test_parser.cpp  test_serializer.cpp
src/tests/unit/protocol/message/: test_assignment.cpp  test_binary.cpp  test_command.cpp  test_error.cpp  test_inquiry.cpp  test_success.cpp  test_variants.cpp
src/tests/unit/protocol/parsing/: test_parser.cpp  test_parser_result.cpp
src/tests/unit/protocol/serialization/: test_serializer.cpp
(+1067 files in other folders)
